# inventory-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/inventory/: __main__.py
src/inventory/controler/: controler.py
src/inventory/database/: database.py
src/inventory/errors/: errors.py
src/inventory/inventory/: inventory.py  item.py
src/inventory/server/: client.py  server.py
